Extractor code and first representation of web display

--- a/public/JSON/projects.json
+++ b/public/JSON/projects.json
@@ -19,7 +19,7 @@
         "shortDescription": "A novel about a fantasy world where hero and antihero must collab for convenience."
     },
     {
-        "href": "https://www.fab.com/listings/3920bd37-7ccc-44c8-8929-742f061d8894",
+        "href": "https://www.fab.com/listings/",
         "name": "Weapon Advaced System",
         "short": "WAS",
         "type": "Unreal Plugin",
